# ableton-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py  smithery.yaml  update_remote_script_macos.sh
AbletonMCP_Remote_Script/: __init__.py
Claude_RemoteScript/: __init__.py
MCP_Server/: __init__.py  server.py
scripts/: update_remote_script_macos.sh
